# hy-example-package

./: pyproject.toml
demo/: demo.hy
my_package/: __init__.hy
