[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my_package"
version = "0.0.1"

dependencies = [
    "hy @ git+https://github.com/hylang/hy.git@master",
]

[tool.setuptools]
packages = ["my_package"]

[tool.setuptools.package-data]
my_package = ["*.hy"]
